# jaclks

./: .clang-format  .codacy.yml  .codecov.yml  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  Config.cmake.in  Makefile  Makefile.win  README.md  codacy.yaml  codecov.yml  cppcheck-suppressions.txt
.github/workflows/: aci.yml  callable-check-job.yml  check-changelog.yml  cmake-multi-platform.yml  codecov.yml  cpp-lint.yml  cpplint.yml  debug.yml  gtest-multi-platform.yml  macos-build.yml  modify-squash-commit.yml  ubuntu-build.yml  windows-build.yml
.github/workflows/callable/: check-cpp-lint.yml
cmake/: DetectPlatform.cmake  HandleDependencies.cmake  HandleDeps.cmake
include/builtin/: types.h
include/compile/: type_traits.h
include/concurrent/: thread.h
include/function/: compare.h
include/hash/: hasher.h  types.h
include/jaclks/cxx-builtin/builtin/: compare.h  equaler.h  hasher.h
include/jaclks/function/: compare.h
include/jaclks/hash/: hasher.h  types.h
include/jaclks/javac-base/java/lang/: character.h  illegal_argument_exception.h  illegal_state_exception.h  index_out_of_bounds_exception.h  string.h  thread.h
include/jaclks/javac-base/java/security/: message_digest.h
include/jaclks/javac-base/java/util/: hash_map.h  map.h
include/jaclks/javac-base/java/util/regex/: matcher.h  pattern.h
include/jaclks/javac-base/lang/: runnable.h  string.h  thread.h
include/javac-base/lang/: string.h  system.h  thread.h
include/lang/: string.h
include/string/: string.h
src/: CMakeLists.txt
src/concurrent/: thread.cc
src/jaclks-internal/cxx-detail/utils/: string_utils.cc  string_utils.h
src/jaclks-internal/javac-base/java/lang/: character.cc  string.cc  system.cc  thread.cc
src/jaclks-internal/javac-base/java/security/: md5_digest.cc  md5_digest.h  message_digest.cc  message_digest_spi.h
src/jaclks-internal/javac-base/java/util/regex/: matcher.cc  pattern.cc  regex_impl.cc  regex_impl.h
src/jaclks-internal/javac-base/lang/: string.cc
src/javac-base/java/security/: message_digest.cc
src/javac-base/lang/: character.cc  string.cc  system.cc  thread.cc
src/lang/: string.cc
src/string/: string.cc
tests/: CMakeLists.txt  main.cc
tests/concurrent/: thread_test.cc
tests/cxx-builtin/: CMakeLists.txt
tests/cxx-builtin/builtin/: comparator_test.cc  compare_test.cc  hasher_test.cc
tests/cxx-detail/: CMakeLists.txt
tests/cxx-detail/utils/: string_utils_test.cc
tests/function/: compare_test.cc
tests/hash/: hasher_test.cc
tests/javac-base/: CMakeLists.txt
tests/javac-base/java/lang/: character_test.cc  string_test.cc  system_test.cc  thread_test.cc
tests/javac-base/java/security/: message_digest_test.cc
tests/javac-base/java/util/regex/: pattern_test.cc
tests/javac-base/lang/: character_test.cc  string_test.cc  system_test.cc  thread_test.cc
tests/lang/: character_test.cc  string_test.cc
tests/string/: string_test.cc
tools/cpplint/: cpplint.py
